update welcome post

--- a/_posts/2021-10-30-welcome.md
+++ b/_posts/2021-10-30-welcome.md
@@ -11,6 +11,6 @@ We want to make the simplest possible website to find relevant DeFi links, no bu
 
 We hope you enjoy the site and we hope we can help you find what you're looking for.
 
-This project is open source, so anyone is welcome to contribute. Check out our [contribution guide](https://defi.navy/contribution_guide) to add your own links, or maybe even correct ours if they're wrong!
+This project is open source, so anyone is welcome to contribute. Check out our [contribution guide](https://defi.navy/contributionguide) to add your own links, or maybe even correct ours if they're wrong!
 
 Thanks for checking out the site, we hope you like it!
